--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <p>Just ₱149/month after. Offer ends 12/09/2023. Cancel anytime.</p>
           <button>Get Started</button>
           <button>View Plans</button>
-          <p>Individual plan only. ₱149/month after. Terms and conditions apply. Offer not available for users who have
+          <p class="individual-plan">Individual plan only. ₱149/month after. Terms and conditions apply. Offer not
+            available for users who have
             already tried Premium. Offer ends 12/09/2023.</p>
         </div>
         <img src="./images/premium.png" alt="">
