added footer logo and links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     </section>
   </main>
   <footer id="footer">
-
+    <span>Spotify</span>
+    <ul>
+      <li>Company</li>
+      <li>About</li>
+      <li>Jobs</li>
+      <li>For the Record</li>
+    </ul>
   </footer>
 </body>
 
