h2 go premium section font size

--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
         <div class="gopremium-icons">
           <div>
             <img src="./images/dl.png" alt="">
-            <p></p>
+            <h3>Download music.</h3>
+            <p>Listen anywhere.</p>
           </div>
           <div>
             <img src="./images/ad-free.png" alt="">
-            <p></p>
+            <h3>Ad-free music listening.</h3>
+            <p>Enjoy nonstop music.</p>
           </div>
           <div>
             <img src="./images/play.png" alt="">
-            <p></p>
+            <h3>Play songs in any order.</h3>
+            <p>Any song, any order.</p>
           </div>
         </div>
       </div>
